# CPP_ECS

./: CMakeCache.txt  CMakeLists.txt  Makefile  a  ecs
include/: CompGroup.hpp  Component.hpp  Component_Position.hpp  Component_Velocity.hpp  Entity.hpp  Simulation.hpp  System.hpp  System_DeltaPosByVel.hpp  Vec3.hpp  main.hpp
src/: main.cpp
src/component/: Component.cpp  Component.hpp
src/components/: Component_Position.cpp  Component_Position.hpp  Component_Velocity.cpp  Component_Velocity.hpp
src/entity/: Entity.cpp  Entity.hpp
src/math/: Vec3.cpp  Vec3.hpp
src/simulation/: Simulation.cpp  Simulation.hpp
src/system/: CompGroup.cpp  CompGroup.hpp  System.cpp  System.hpp
src/systems/: System_DeltaPosByVel.cpp  System_DeltaPosByVel.hpp
